# GraphicsAssignment2

./: CMakeLists.txt
Game/: main.cpp
RayCasting-Assets/Components/: Image.cpp  Intersection.cpp  Intersection.h  Ray.cpp  Ray.h
RayCasting-Assets/ImageConstructor/: ImageConstructor.cpp  ImageConstructor.h
RayCasting-Assets/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  SpotLight.cpp  SpotLight.h
RayCasting-Assets/Object/: Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
RayCasting-Assets/Reader/: ConfigReader.cpp  ConfigReader.h
Util/ImageConstractor/: Hit.cpp  Hit.h  Image.h  Ray.cpp
Util/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  SpotLight.cpp
Util/Object/: Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Util/Reader/: ConfigReader.cpp  ConfigReader.h
